# HackAI_Hack-230459

./: .env-example  LICENSE  README.md  pyproject.toml
src/: agent1qfu86j53jq_data.json  main.py
src/agents/agent_1/: Weather_Agent.py
src/agents/agent_2/: weather_api_agent.py
src/frontend/: frontend_components.py
src/messages/: converse.py
src/utils/: alert_func.py  data_server.py  fetch.py  mail_service.py
