[tool.poetry]
name = "techfestproject"
version = "0.1.0"
description = ""
authors = ["XERO47 <141753439+XERO47@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uagents = "^0.6.2"
streamlit = "^1.27.2"
streamlit-folium = "^0.15.0"
geopy = "^2.4.0"
python-dotenv = "^1.0.0"
fastapi = "^0.103.2"
geocoder = "^1.38.1"
matplotlib = "^3.8.0"
streamlit-autorefresh = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
